examples of use - updated

--- a/examples/index.html
+++ b/examples/index.html
@@ -58,7 +58,7 @@
         </div>
 
         <div class="input select rating-a">
-            <label for="example-a">Rating (example 1):</label>
+            <label for="example-a">Rating (example A):</label>
             <select id="example-a" name="rating">
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -74,7 +74,7 @@
         </div>
 
         <div class="input select rating-b">
-            <label for="example-b">Rating (example 2):</label>
+            <label for="example-b">Rating (example B):</label>
             <select id="example-b" name="rating">
                 <option value="Bad">Bad</option>
                 <option value="Mediocre">Mediocre</option>
@@ -84,7 +84,7 @@
         </div>
 
         <div class="input select rating-c">
-            <label for="example-c">Rating (example 3):</label>
+            <label for="example-c">Rating (example C):</label>
             <select id="example-c" name="rating">
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -95,7 +95,7 @@
         </div>
 
         <div class="input select rating-d">
-            <label for="example-d">Rating (example 4):</label>
+            <label for="example-d">Rating (example D):</label>
             <select id="example-d" name="rating">
                 <option value="1">1</option>
                 <option value="2">2</option>
@@ -111,31 +111,30 @@
         </div>
 
         <div class="input select rating-e">
-            <label for="example-e">Rating (example 5):</label>
+            <label for="example-e">Rating (example E):</label>
             <select id="example-e" name="rating">
-                <option value="AAA">AAA</option>
-                <option value="AA+">AA+</option>
-                <option value="AA">AA</option>
-                <option value="AA-">AA-</option>
-                <option value="A+">A+</option>
-                <option value="A" selected="selected">A</option>
-                <option value="A-">A-</option>
-                <option value="BBB+">BBB+</option>
-                <option value="BBB">BBB</option>
-                <option value="BBB-">BBB-</option>
-                <option value="BB+">BB+</option>
-                <option value="BB">BB</option>
-                <option value="BB-">BB-</option>
-                <option value="B+">B+</option>
-                <option value="B">B</option>
-                <option value="B-">B-</option>
-                <option value="CCC+">CCC+</option>
-                <option value="CCC">CCC</option>
-                <option value="CCC-">CCC-</option>
-                <option value="CC">CC</option>
-                <option value="C">C</option>
                 <option value="D">D</option>
-
+                <option value="C">C</option>
+                <option value="CC">CC</option>
+                <option value="CCC-">CCC-</option>
+                <option value="CCC">CCC</option>
+                <option value="CCC+">CCC+</option>
+                <option value="B-">B-</option>
+                <option value="B">B</option>
+                <option value="B+">B+</option>
+                <option value="BB-">BB-</option>
+                <option value="BB">BB</option>
+                <option value="BB+">BB+</option>
+                <option value="BBB-">BBB-</option>
+                <option value="BBB">BBB</option>
+                <option value="BBB+">BBB+</option>
+                <option value="A-">A-</option>
+                <option value="A" selected="selected">A</option>
+                <option value="A+">A+</option>
+                <option value="AA-">AA-</option>
+                <option value="AA">AA</option>
+                <option value="AA+">AA+</option>
+                <option value="AAA">AAA</option>
             </select>
         </div>
 
