--- a/examples/index.html
+++ b/examples/index.html
@@ -13,7 +13,7 @@
         $(function () {
             $('.rating-enable').click(function () {
                 $('#example-a, #example-b').barrating();
-                $('#example-c, #example-d, #example-e').barrating('init', {
+                $('#example-c, #example-d, #example-e').barrating('show', {
                     showValues:true,
                     showSelectedRating:false
                 });
