--- a/examples/index.html
+++ b/examples/index.html
@@ -13,19 +13,32 @@
         $(function () {
             $('.rating-enable').click(function () {
                 $('#example-a, #example-b').barrating();
-                $('#example-c, #example-d, #example-e').barrating('show', {
+
+                $('#example-c, #example-d').barrating('show', {
                     showValues:true,
                     showSelectedRating:false
                 });
+
+                $('#example-e').barrating('show', {
+                    showValues:true,
+                    showSelectedRating:false,
+                    onSelect:function(value, text) {
+                        alert('Rating: ' + value);
+                    }
+                });
+
                 $('#example-f').barrating({ showSelectedRating:false });
+
                 $(this).addClass('deactivated');
                 $('.rating-disable').removeClass('deactivated');
             });
+
             $('.rating-disable').click(function () {
                 $('select').barrating('destroy');
                 $(this).addClass('deactivated');
                 $('.rating-enable').removeClass('deactivated');
             });
+
             $('.rating-enable').trigger('click');
         });
     </script>
@@ -48,7 +61,7 @@
 
             <blockquote>
                 jQuery Bar Rating Plugin works by transforming a standard
-                select box into a rating widget. It’s only 2kb minified and easy
+                select box into a rating widget. It’s only 2.5kb minified and easy
                 to style with CSS. Take a look at some examples.
             </blockquote>
         </header>
@@ -112,7 +125,7 @@
         </div>
 
         <div class="input select rating-e">
-            <label for="example-e">Rating (example E):</label>
+            <label for="example-e">Rating (example E), with a callback:</label>
             <select id="example-e" name="rating">
                 <option value="D">D</option>
                 <option value="C">C</option>
@@ -161,6 +174,12 @@
         <strong>showSelectedRating:true</strong>
 
         <p>If set to true, user selected rating will be displayed next to the widget.</p>
+
+        <h2>Callbacks</h2>
+
+        <strong>onSelect:function(value, text)</strong>
+
+        <p>Fired when a rating is selected.</p>
 
         <h2>License</h2>
 
