CHANGELOG and index.html updated

--- a/examples/index.html
+++ b/examples/index.html
@@ -66,7 +66,7 @@
 
             <blockquote>
                 jQuery Bar Rating Plugin works by transforming a standard
-                select box into a rating widget. It’s only 2.5kb minified and easy
+                select box into a rating widget. It’s only 4kb minified and easy
                 to style with CSS. Take a look at some examples.
             </blockquote>
         </header>
@@ -189,6 +189,9 @@
 
         <strong>showSelectedRating:true</strong>
         <p>If set to true, user selected rating will be displayed next to the widget.</p>
+
+        <strong>reverse:false</strong>
+        <p>If set to true, the ratings will be reversed.</p>
 
         <h2>Methods</h2>
 
