--- a/examples/index.html
+++ b/examples/index.html
@@ -39,6 +39,10 @@
                     reverse:true
                 });
 
+                $('#example-h').barrating('show', {
+                    reverse:true
+                });
+
                 $(this).addClass('deactivated');
                 $('.rating-disable').removeClass('deactivated');
             });
@@ -185,21 +189,34 @@
             </select>
         </div>
 
+        <div class="input select rating-h">
+            <label for="example-h">Vertical rating:</label>
+            <select id="example-h" name="rating">
+                <option value="5">5</option>
+                <option value="4">4</option>
+                <option value="3">3</option>
+                <option value="2">2</option>
+                <option value="1" selected="selected">1</option>
+            </select>
+        </div>
+
         <br/><br/>
 
         <h2>How to use</h2>
 
-        <p>1. Create a select field.</p>
+        <p>1. Add markup for your rating.</p>
 
         <p>
             <strong>
-                &lt;select id=&quot;example&quot;&gt;<br/>
-                &nbsp;&nbsp;&nbsp;&lt;option value=&quot;1&quot;&gt;1&lt;/option&gt;<br/>
-                &nbsp;&nbsp;&nbsp;&lt;option value=&quot;2&quot;&gt;2&lt;/option&gt;<br/>
-                &nbsp;&nbsp;&nbsp;&lt;option value=&quot;3&quot;&gt;3&lt;/option&gt;<br/>
-                &nbsp;&nbsp;&nbsp;&lt;option value=&quot;4&quot;&gt;4&lt;/option&gt;<br/>
-                &nbsp;&nbsp;&nbsp;&lt;option value=&quot;5&quot;&gt;5&lt;/option&gt;<br/>
-                &lt;/select&gt;
+                &lt;div class="rating-a"&gt;<br/>
+                &nbsp;&nbsp;&lt;select id=&quot;example&quot;&gt;<br/>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value=&quot;1&quot;&gt;1&lt;/option&gt;<br/>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value=&quot;2&quot;&gt;2&lt;/option&gt;<br/>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value=&quot;3&quot;&gt;3&lt;/option&gt;<br/>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value=&quot;4&quot;&gt;4&lt;/option&gt;<br/>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;option value=&quot;5&quot;&gt;5&lt;/option&gt;<br/>
+                &nbsp;&nbsp;&lt;/select&gt;<br/>
+                &lt;/div&gt;
             </strong>
         </p>
 
