set method - instructions updated

--- a/examples/index.html
+++ b/examples/index.html
@@ -260,6 +260,9 @@
         <strong>$('select').barrating('show');</strong>
         <p>Shows the rating widget.</p>
 
+        <strong>$('select').barrating('set', value);</strong>
+        <p>Sets the value of rating widget.</p>
+
         <strong>$('select').barrating('clear');</strong>
         <p>Clears the rating.</p>
 
