--- a/examples/index.html
+++ b/examples/index.html
@@ -16,7 +16,9 @@
 
                 $('#example-b').barrating('show', {
                     readonly:true
-                });
+                })
+
+		$('#example-b').barrating('set', 'Mediocre');
 
                 $('#example-c, #example-d').barrating('show', {
                     showValues:true,
