allow html in ratings, example added - fixes #30

--- a/examples/index.html
+++ b/examples/index.html
@@ -18,7 +18,7 @@
                     readonly:true
                 });
 
-		$('#example-b').barrating('set', 'Mediocre');
+                $('#example-b').barrating('set', 'Mediocre');
 
                 $('#example-c, #example-d').barrating('show', {
                     showValues:true,
@@ -128,16 +128,16 @@
         <div class="input select rating-d">
             <label for="example-d">Advanced styling:</label>
             <select id="example-d" name="rating">
-                <option value="1">1</option>
-                <option value="2">2</option>
-                <option value="3">3</option>
-                <option value="4">4</option>
-                <option value="5">5</option>
-                <option value="6">6</option>
-                <option value="7">7</option>
-                <option value="8">8</option>
-                <option value="9">9</option>
-                <option value="10">10</option>
+                <option value="1" data-html="<strong>1</strong>">1</option>
+                <option value="2" data-html="<strong>2</strong>">2</option>
+                <option value="3" data-html="<strong>3</strong>">3</option>
+                <option value="4" data-html="<strong>4</strong>">4</option>
+                <option value="5" data-html="<strong>5</strong>">5</option>
+                <option value="6" data-html="<strong>6</strong>">6</option>
+                <option value="7" data-html="<strong>7</strong>">7</option>
+                <option value="8" data-html="<strong>8</strong>">8</option>
+                <option value="9" data-html="<strong>9</strong>">9</option>
+                <option value="10" data-html="<strong>10</strong>">10</option>
             </select>
         </div>
 
