preventDefault() event method added to click handlers - fixes #31

--- a/examples/index.html
+++ b/examples/index.html
@@ -50,14 +50,18 @@
                 $('select').barrating('destroy');
             }
 
-            $('.rating-enable').click(function() {
+            $('.rating-enable').click(function(event) {
+                event.preventDefault();
+
                 ratingEnable();
 
                 $(this).addClass('deactivated');
                 $('.rating-disable').removeClass('deactivated');
             });
 
-            $('.rating-disable').click(function() {
+            $('.rating-disable').click(function(event) {
+                event.preventDefault();
+
                 ratingDisable();
 
                 $(this).addClass('deactivated');
