fastClicks option added

--- a/examples/index.html
+++ b/examples/index.html
@@ -312,6 +312,11 @@ styled ratings coexist together. Expected result:
 						</p>
 
 						<p>
+							<strong>fastClicks: true</strong><br>
+							Remove 300ms click delay on touch devices.
+						</p>
+
+						<p>
 							<strong>wrapperClass: 'br-wrapper'</strong><br>
 							Specify wrapper div's class. Useful in cases when you want to have a few differently styled ratings coexist together.
 						</p>
