Fixing setup instructions

--- a/examples/index.html
+++ b/examples/index.html
@@ -310,9 +310,9 @@ bower install jquery-bar-rating
 &lt;script src="jquery.barrating.min.js"&gt;&lt;/script&gt;
 &lt;script type="text/javascript"&gt;
    $(function() {
-      $('#example').barrating(
+      $('#example').barrating({
         theme: 'fontawesome-stars'
-      );
+      });
    });
 &lt;/script&gt;
 </code>
